splitting out creatures

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,6 +40,11 @@
 
   <input type="button" value="reset" onclick="reset();">
   <input id="pause" type="button" value="start" onclick="pause();">
+  <label for="size">World Size</label>
+  <input name="size" id="size" type="text" value="500">
+  <label for="pop">Pop Size</label>
+  <input name="pop" id="pop" type="text" value="30">
+  <div id="cycle"></div>
   <main id="world">
 
     <!-- Programatically create a bunch of div's. Size is so it fits correctly.
