--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,8 +7,6 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
 
@@ -30,10 +28,14 @@
 
   <input type="button" value="reset" onclick="reset();">
   <input id="pause" type="button" value="start" onclick="pause();">
+  <input id="pause" type="button" value="next" onclick="next();">
   <label for="size">World Size</label>
   <input name="size" id="size" type="text" value="500">
   <label for="pop">Pop Size</label>
   <input name="pop" id="pop" type="text" value="30">
+  <label for="debug">Debug Index</label>
+  <input name="debug" id="debug" type="text" value="Nan" onChange="updateDebugCreature(this.value);">
+  
   <div id="cycle"></div>
   <main id="world">
 
@@ -41,6 +43,9 @@
         Toggle a div class for an occupied grid.
     -->
   </main>
+  <section id="debug_console">
+    
+  </section>
 
 
 </body>
