Implemented crossover from debug selected creatures

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,7 @@
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
 
+  <input type="button" value="breed" onclick="breed();">
   <input type="button" value="reset" onclick="reset();">
   <input id="pause" type="button" value="start" onclick="pause();">
   <input id="pause" type="button" value="next" onclick="next();">
